WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48318
Web Inspector: console does not work after two reloads.
https://bugs.webkit.org/show_bug.cgi?id=48318
Summary
Web Inspector: console does not work after two reloads.
Pavel Feldman
Reported
2010-10-26 06:08:30 PDT
Disconnecting front-end should not mutate inspector state.
Attachments
[PATCH] Proposed change.
(1.01 KB, patch)
2010-10-26 06:10 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2010-10-26 06:10:04 PDT
Created
attachment 71868
[details]
[PATCH] Proposed change.
WebKit Commit Bot
Comment 2
2010-10-26 13:37:30 PDT
Comment on
attachment 71868
[details]
[PATCH] Proposed change. Clearing flags on attachment: 71868 Committed
r70566
: <
http://trac.webkit.org/changeset/70566
>
WebKit Commit Bot
Comment 3
2010-10-26 13:37:35 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 4
2010-10-26 14:43:08 PDT
The commit-queue encountered the following flaky tests while processing
attachment 71868
[details]
: animations/combo-transform-translate+scale.html fast/css/font-face-download-error.html Please file bugs against the tests. These tests were authored by
cmarrin@apple.com
,
darin@apple.com
,
ojan@chromium.org
,
pol@apple.com
, and
yuzo@google.com
. The commit-queue is continuing to process your patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug