2010-10-26  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: console does not work after two reloads.
        https://bugs.webkit.org/show_bug.cgi?id=48318

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::disconnectFrontend):

git-svn-id: svn://svn.chromium.org/blink/trunk@70566 bbb929c8-8fbe-4397-9dbb-9b2b20218538