third_party/WebKit/WebCore/inspector/InspectorController.cpp
@@ -577,8 +577,6 @@ void InspectorController::disconnectFrontend()
     if (!m_frontend)
         return;
 
-    setConsoleMessagesEnabled(false);
-
     m_frontend.clear();
 
     InspectorInstrumentation::frontendDeleted();
